部门表响应式改造