@@ -1,26 +1,37 @@
 package com.ruoyi.system.service.impl;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
 import com.ruoyi.common.annotation.DataScope;
 import com.ruoyi.common.constant.UserConstants;
 import com.ruoyi.common.core.domain.TreeSelect;
 import com.ruoyi.common.core.domain.entity.SysDept;
 import com.ruoyi.common.core.domain.entity.SysRole;
 import com.ruoyi.common.core.domain.entity.SysUser;
-import com.ruoyi.common.core.text.Convert;
 import com.ruoyi.common.exception.ServiceException;
 import com.ruoyi.common.utils.SecurityUtils;
 import com.ruoyi.common.utils.StringUtils;
 import com.ruoyi.common.utils.spring.SpringUtils;
+import com.ruoyi.framework.security.ReactiveSecurityUtils;
+import com.ruoyi.system.converter.SysDeptConverter;
+import com.ruoyi.system.dto.SysDeptDTO;
 import com.ruoyi.system.mapper.SysDeptMapper;
 import com.ruoyi.system.mapper.SysRoleMapper;
-import com.ruoyi.system.service.ISysDeptService;
+import com.ruoyi.system.query.SysDeptQuery;
+import com.ruoyi.system.repository.SysDeptRepository;
+import com.ruoyi.system.service.SysDeptService;
+import com.ruoyi.system.vo.SysDeptVO;
+import jakarta.annotation.Resource;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.BooleanUtils;
+import org.apache.commons.lang3.ObjectUtils;
+import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * 部门管理 服务实现
@@ -28,21 +39,187 @@ import com.ruoyi.system.service.ISysDeptService;
  * @author ruoyi
  */
 @Service
-public class SysDeptServiceImpl implements ISysDeptService {
-    @Autowired
+public class SysDeptServiceImpl implements SysDeptService {
+
+    @Resource
+    private SysDeptConverter sysDeptConverter;
+    @Resource
+    private SysDeptRepository sysDeptRepository;
+
+    @Resource
     private SysDeptMapper deptMapper;
 
-    @Autowired
+    @Resource
     private SysRoleMapper roleMapper;
 
     /**
-     * 查询部门管理数据
-     *
-     * @param dept 部门信息
-     * @return 部门信息集合
+     * 查询部门列表
      */
     @Override
+    public Flux<SysDeptVO> selectDeptList(SysDeptQuery query) {
+        return sysDeptRepository.selectDeptList(query)
+                .map(sysDeptConverter::toSysDeptVO);
+    }
+
+    /**
+     * 查询部门列表（排除指定节点）
+     */
+    @Override
+    public Flux<SysDeptVO> selectDeptListExclude(Long deptId) {
+        return sysDeptRepository.selectDeptList(new SysDeptQuery())
+                .filter(dept -> {
+                    // 条件1：排除当前部门
+                    if (Objects.equals(dept.getDeptId(), deptId)) {
+                        return false;
+                    }
+                    // 条件2：排除祖先ID包含当前部门ID的部门
+                    Set<String> set = org.springframework.util.StringUtils.commaDelimitedListToSet(dept.getAncestors());
+                    return BooleanUtils.isFalse(set.contains(deptId + ""));
+                })
+                .map(sysDeptConverter::toSysDeptVO);
+    }
+
+    /**
+     * 根据部门ID查询信息
+     */
+    @Override
+    public Mono<SysDeptVO> selectDeptById(Long deptId) {
+        return this.checkDeptAuthority(deptId)
+                .then(sysDeptRepository.findById(deptId).switchIfEmpty(Mono.error(new ServiceException("部门不存在"))))
+                .map(sysDeptConverter::toSysDeptVO);
+    }
+
+    /**
+     * 新增部门
+     */
+    @Override
+    public Mono<Void> insertDept(SysDeptDTO dto) {
+        return this.checkDeptNameUnique(dto)
+                .then(sysDeptRepository.findById(dto.getParentId()).switchIfEmpty(Mono.error(new ServiceException("上级部门不存在"))))
+                .flatMap(parent -> {
+                    // 如果父节点不为正常状态,则不允许新增子节点
+                    if (ObjectUtils.notEqual(parent.getStatus(), UserConstants.DEPT_NORMAL)) {
+                        return Mono.error(new ServiceException("上级部门停用，不允许新增"));
+                    }
+
+                    com.ruoyi.system.entity.SysDept dept = sysDeptConverter.toSysDept(dto);
+                    dept.setAncestors(parent.getAncestors() + "," + parent.getDeptId());
+                    return sysDeptRepository.save(dept);
+                })
+                .then();
+    }
+
+    /**
+     * 校验部门名称是否唯一
+     */
+    private Mono<Void> checkDeptNameUnique(SysDeptDTO dto) {
+        return sysDeptRepository.selectDeptNameUnique(dto.getDeptName(), dto.getParentId())
+                .flatMap(dept -> {
+                    if (ObjectUtils.notEqual(dept.getDeptId(), dto.getDeptId())) {
+                        return Mono.error(new ServiceException(String.format("部门名称【%1$s】已存在 ", dto.getDeptName())));
+                    }
+                    return Mono.empty();
+                });
+    }
+
+    /**
+     * 修改部门
+     */
+    @Override
+    public Mono<Void> updateDept(SysDeptDTO dto) {
+        return this.checkDeptAuthority(dto.getDeptId())
+                .then(this.checkDeptNameUnique(dto))
+                .then(Mono.defer(() -> {
+                    if (Objects.equals(dto.getDeptId(), dto.getParentId())) {
+                        return Mono.error(new ServiceException("上级部门不能是自己"));
+                    }
+                    if (StringUtils.equals(UserConstants.DEPT_DISABLE, dto.getStatus())) {
+                        return sysDeptRepository.countNormalChildrenByDeptId(dto.getDeptId())
+                                .flatMap(countNormalChildren -> {
+                                    if (countNormalChildren > 0) {
+                                        return Mono.error(new ServiceException("该部门包含未停用的子部门"));
+                                    }
+                                    return Mono.empty();
+                                });
+                    }
+                    return Mono.empty();
+                }))
+                .then(sysDeptRepository.findById(dto.getDeptId()).switchIfEmpty(Mono.error(new ServiceException("部门不存在"))))
+                .zipWith(sysDeptRepository.findById(dto.getParentId()).switchIfEmpty(Mono.error(new ServiceException("上级部门不存在"))))
+                .flatMap(tuple -> {
+                    com.ruoyi.system.entity.SysDept parent = tuple.getT2();
+                    com.ruoyi.system.entity.SysDept dept = tuple.getT1();
+
+                    // 构建新的 ancestors
+                    String newAncestors = parent.getAncestors() + "," + parent.getDeptId();
+                    String oldAncestors = dept.getAncestors();
+
+                    sysDeptConverter.copyProperties(dto, dept);
+                    dept.setAncestors(newAncestors);
+
+                    // 查询子部门并更新其 ancestors
+                    return sysDeptRepository.selectChildrenDeptById(dto.getDeptId())
+                            .map(child -> {
+                                child.setAncestors(child.getAncestors().replaceFirst(oldAncestors, newAncestors));
+                                return child;
+                            })
+                            .transform(children -> sysDeptRepository.saveAll(children))
+                            // 更新当前部门
+                            .then(sysDeptRepository.save(dept))
+                            // 如果是启用状态，则启用上级部门
+                            .flatMap(result -> {
+                                if (Objects.equals(dept.getStatus(), UserConstants.DEPT_NORMAL)) {
+                                    Set<String> set = org.springframework.util.StringUtils.commaDelimitedListToSet(dept.getAncestors());
+                                    if (CollectionUtils.isNotEmpty(set)) {
+                                        return sysDeptRepository.updateParentNormal(set);
+                                    }
+                                }
+                                return Mono.empty();
+                            });
+                });
+    }
+
+    /**
+     * 删除部门
+     */
+    @Override
+    public Mono<Void> deleteDeptById(Long deptId) {
+        return sysDeptRepository.countChildByDeptId(deptId)
+                .flatMap(countChild -> {
+                    if (countChild > 0) {
+                        return Mono.error(new ServiceException("存在下级部门，不允许删除"));
+                    }
+                    return Mono.empty();
+                })
+                .then(sysDeptRepository.countUserByDeptId(deptId))
+                .flatMap(countUser -> {
+                    if (countUser > 0) {
+                        return Mono.error(new ServiceException("部门存在用户，不允许删除"));
+                    }
+                    return Mono.empty();
+                })
+                .then(this.checkDeptAuthority(deptId))
+                .then(sysDeptRepository.deleteByDeptId(deptId));
+    }
+
+    private Mono<Void> checkDeptAuthority(Long deptId) {
+        return ReactiveSecurityUtils.getUserId()
+                .filter(SysUser::isNotAdmin)
+                .flatMap(userId -> {
+                    if (SysUser.isNotAdmin(userId)) {
+                        SysDept dept = new SysDept();
+                        dept.setDeptId(deptId);
+                        List<SysDept> depts = SpringUtils.getAopProxy(this).selectDeptList(dept);
+                        if (StringUtils.isEmpty(depts)) {
+                            return Mono.error(new ServiceException("没有权限访问部门数据！"));
+                        }
+                    }
+                    return Mono.empty();
+                });
+    }
+
     @DataScope(deptAlias = "d")
+    @Override
     public List<SysDept> selectDeptList(SysDept dept) {
         return deptMapper.selectDeptList(dept);
     }
@@ -67,8 +244,8 @@ public class SysDeptServiceImpl implements ISysDeptService {
      */
     @Override
     public List<SysDept> buildDeptTree(List<SysDept> depts) {
-        List<SysDept> returnList = new ArrayList<SysDept>();
-        List<Long> tempList = depts.stream().map(SysDept::getDeptId).collect(Collectors.toList());
+        List<SysDept> returnList = new ArrayList<>();
+        List<Long> tempList = depts.stream().map(SysDept::getDeptId).toList();
         for (SysDept dept : depts) {
             // 如果是顶级节点, 遍历该父节点的所有子节点
             if (!tempList.contains(dept.getParentId())) {
@@ -107,68 +284,6 @@ public class SysDeptServiceImpl implements ISysDeptService {
     }
 
     /**
-     * 根据部门ID查询信息
-     *
-     * @param deptId 部门ID
-     * @return 部门信息
-     */
-    @Override
-    public SysDept selectDeptById(Long deptId) {
-        return deptMapper.selectDeptById(deptId);
-    }
-
-    /**
-     * 根据ID查询所有子部门（正常状态）
-     *
-     * @param deptId 部门ID
-     * @return 子部门数
-     */
-    @Override
-    public int selectNormalChildrenDeptById(Long deptId) {
-        return deptMapper.selectNormalChildrenDeptById(deptId);
-    }
-
-    /**
-     * 是否存在子节点
-     *
-     * @param deptId 部门ID
-     * @return 结果
-     */
-    @Override
-    public boolean hasChildByDeptId(Long deptId) {
-        int result = deptMapper.hasChildByDeptId(deptId);
-        return result > 0;
-    }
-
-    /**
-     * 查询部门是否存在用户
-     *
-     * @param deptId 部门ID
-     * @return 结果 true 存在 false 不存在
-     */
-    @Override
-    public boolean checkDeptExistUser(Long deptId) {
-        int result = deptMapper.checkDeptExistUser(deptId);
-        return result > 0;
-    }
-
-    /**
-     * 校验部门名称是否唯一
-     *
-     * @param dept 部门信息
-     * @return 结果
-     */
-    @Override
-    public boolean checkDeptNameUnique(SysDept dept) {
-        Long deptId = StringUtils.isNull(dept.getDeptId()) ? -1L : dept.getDeptId();
-        SysDept info = deptMapper.checkDeptNameUnique(dept.getDeptName(), dept.getParentId());
-        if (StringUtils.isNotNull(info) && info.getDeptId().longValue() != deptId.longValue()) {
-            return UserConstants.NOT_UNIQUE;
-        }
-        return UserConstants.UNIQUE;
-    }
-
-    /**
      * 校验部门是否有数据权限
      *
      * @param deptId 部门id
@@ -183,87 +298,6 @@ public class SysDeptServiceImpl implements ISysDeptService {
                 throw new ServiceException("没有权限访问部门数据！");
             }
         }
-    }
-
-    /**
-     * 新增保存部门信息
-     *
-     * @param dept 部门信息
-     * @return 结果
-     */
-    @Override
-    public int insertDept(SysDept dept) {
-        SysDept info = deptMapper.selectDeptById(dept.getParentId());
-        // 如果父节点不为正常状态,则不允许新增子节点
-        if (!UserConstants.DEPT_NORMAL.equals(info.getStatus())) {
-            throw new ServiceException("部门停用，不允许新增");
-        }
-        dept.setAncestors(info.getAncestors() + "," + dept.getParentId());
-        return deptMapper.insertDept(dept);
-    }
-
-    /**
-     * 修改保存部门信息
-     *
-     * @param dept 部门信息
-     * @return 结果
-     */
-    @Override
-    public int updateDept(SysDept dept) {
-        SysDept newParentDept = deptMapper.selectDeptById(dept.getParentId());
-        SysDept oldDept = deptMapper.selectDeptById(dept.getDeptId());
-        if (StringUtils.isNotNull(newParentDept) && StringUtils.isNotNull(oldDept)) {
-            String newAncestors = newParentDept.getAncestors() + "," + newParentDept.getDeptId();
-            String oldAncestors = oldDept.getAncestors();
-            dept.setAncestors(newAncestors);
-            updateDeptChildren(dept.getDeptId(), newAncestors, oldAncestors);
-        }
-        int result = deptMapper.updateDept(dept);
-        if (UserConstants.DEPT_NORMAL.equals(dept.getStatus()) && StringUtils.isNotEmpty(dept.getAncestors())
-                && !StringUtils.equals("0", dept.getAncestors())) {
-            // 如果该部门是启用状态，则启用该部门的所有上级部门
-            updateParentDeptStatusNormal(dept);
-        }
-        return result;
-    }
-
-    /**
-     * 修改该部门的父级部门状态
-     *
-     * @param dept 当前部门
-     */
-    private void updateParentDeptStatusNormal(SysDept dept) {
-        String ancestors = dept.getAncestors();
-        Long[] deptIds = Convert.toLongArray(ancestors);
-        deptMapper.updateDeptStatusNormal(deptIds);
-    }
-
-    /**
-     * 修改子元素关系
-     *
-     * @param deptId       被修改的部门ID
-     * @param newAncestors 新的父ID集合
-     * @param oldAncestors 旧的父ID集合
-     */
-    public void updateDeptChildren(Long deptId, String newAncestors, String oldAncestors) {
-        List<SysDept> children = deptMapper.selectChildrenDeptById(deptId);
-        for (SysDept child : children) {
-            child.setAncestors(child.getAncestors().replaceFirst(oldAncestors, newAncestors));
-        }
-        if (children.size() > 0) {
-            deptMapper.updateDeptChildren(children);
-        }
-    }
-
-    /**
-     * 删除部门管理信息
-     *
-     * @param deptId 部门ID
-     * @return 结果
-     */
-    @Override
-    public int deleteDeptById(Long deptId) {
-        return deptMapper.deleteDeptById(deptId);
     }
 
     /**
@@ -284,10 +318,8 @@ public class SysDeptServiceImpl implements ISysDeptService {
      * 得到子节点列表
      */
     private List<SysDept> getChildList(List<SysDept> list, SysDept t) {
-        List<SysDept> tlist = new ArrayList<SysDept>();
-        Iterator<SysDept> it = list.iterator();
-        while (it.hasNext()) {
-            SysDept n = (SysDept) it.next();
+        List<SysDept> tlist = new ArrayList<>();
+        for (SysDept n : list) {
             if (StringUtils.isNotNull(n.getParentId()) && n.getParentId().longValue() == t.getDeptId().longValue()) {
                 tlist.add(n);
             }
@@ -299,6 +331,7 @@ public class SysDeptServiceImpl implements ISysDeptService {
      * 判断是否有子节点
      */
     private boolean hasChild(List<SysDept> list, SysDept t) {
-        return getChildList(list, t).size() > 0;
+        return !getChildList(list, t).isEmpty();
     }
+
 }
